tests/NormalTests/paczka1/small_fuzzy/82607010.err
Error in line 1: A104 S950 22,3
Error in line 4: SulIzT A104 12,1
Error in line 5: A104 A104 15,8
Error in line 6: SulIzT S950 97,4
Error in line 12: SulIzT A104 7,7
